HTTP Request のサンプル

--- a/haskell-stack.cabal
+++ b/haskell-stack.cabal
@@ -34,7 +34,11 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , req
+    , text
   default-language: Haskell2010
 
 executable haskell-stack-exe
@@ -47,8 +51,12 @@ executable haskell-stack-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , haskell-stack
+    , req
+    , text
   default-language: Haskell2010
 
 test-suite haskell-stack-test
@@ -62,6 +70,10 @@ test-suite haskell-stack-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , haskell-stack
+    , req
+    , text
   default-language: Haskell2010
